apps/02-monitoring/prometheus-ingress/overlays/staging/prometheus-ingress.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: prometheus
  namespace: monitoring
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`prometheus.stg.truxonline.com`)
      kind: Rule
      services:
        - name: prometheus-server
          port: 80
  tls:
    certResolver: letsencrypt-staging
---
# HTTP Redirect for Prometheus
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: prometheus-http
  namespace: monitoring
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`prometheus.stg.truxonline.com`)
      kind: Rule
      middlewares:
        - name: redirect-https
      services:
        - name: prometheus-server
          port: 80
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: alertmanager
  namespace: monitoring
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`alertmanager.stg.truxonline.com`)
      kind: Rule
      services:
        - name: prometheus-alertmanager
          port: 9093
  tls:
    certResolver: letsencrypt-staging
---
# HTTP Redirect for Alertmanager
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: alertmanager-http
  namespace: monitoring
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`alertmanager.stg.truxonline.com`)
      kind: Rule
      middlewares:
        - name: redirect-https
      services:
        - name: prometheus-alertmanager
          port: 9093
